sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:11: error: ';' expected but ')' found.
      if(max > temp){max = temp);imax=k}
                               ^