sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  var max : Int = 0
  var imax : Int = 0
  var temp : Int =0
  for(i<-0 to getNombreValeurs()-1){
    max=getValeur(i)
    imax = i
    for(k <-i to getNombreValeurs()-1){
      temp = getValeur(k)
      if(max > temp){max = temp);imax=k}
    }
    echange(i,imax)
    
  }
  
}